--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "typecheck": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "element-plus": "^2.6.2",
     "vue": "^3.4.21",
     "vue-router": "^4.3.2"
