--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "element-plus-vite-starter",
+  "name": "flexmodel-ui",
   "private": true,
   "version": "0.1.0",
   "scripts": {
@@ -26,6 +26,7 @@
     "unplugin-vue-components": "^0.26.0",
     "vite": "^5.2.5",
     "vite-ssg": "^0.23.6",
+    "vite-svg-loader": "^5.1.0",
     "vue-tsc": "^2.0.7"
   },
   "license": "MIT"
