--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "echarts": "^5.5.1",
     "element-plus": "^2.6.2",
     "vue": "^3.4.21",
     "vue-router": "^4.3.2"
