--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "typecheck": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "@apollo/client": "^3.10.8",
     "axios": "^1.7.2",
     "echarts": "^5.5.1",
     "element-plus": "^2.6.2",
+    "graphiql": "^3.3.2",
+    "graphql": "^16.9.0",
     "vue": "^3.4.21",
     "vue-router": "^4.3.2"
   },
