--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.4.0",
     "antd": "^5.20.2",
+    "axios": "^1.7.5",
     "react": "^18.3.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^6.26.1",
