--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@ant-design/icons": "^5.4.0",
     "antd": "^5.20.2",
     "axios": "^1.7.5",
+    "graphiql": "^3.4.0",
+    "graphql": "^16.9.0",
     "react": "^18.3.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^6.26.1",
