--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.4.0",
+    "@emotion/css": "^11.13.0",
+    "@graphiql/plugin-explorer": "^3.2.2",
+    "@graphiql/react": "^0.26.2",
     "antd": "^5.20.2",
     "axios": "^1.7.5",
-    "graphiql": "^3.4.0",
+    "graphiql": "^3.7.1",
     "graphql": "^16.9.0",
     "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^6.26.1",
     "redux": "4.0.5",
