--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@graphiql/react": "^0.26.2",
     "antd": "^5.20.2",
     "axios": "^1.7.5",
+    "echarts": "^5.5.1",
     "graphiql": "^3.7.1",
     "graphql": "^16.9.0",
     "react": "^18.3.1",
