--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "echarts": "^5.5.1",
     "graphiql": "^3.7.1",
     "graphql": "^16.9.0",
+    "i18next": "^23.16.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.1.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^6.26.1",
     "redux": "4.0.5",
@@ -35,6 +37,7 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
+    "i18next-browser-languagedetector": "^8.0.0",
     "redux-devtools-extension": "^2.13.9",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
