--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "antd": "^5.20.2",
     "axios": "^1.7.5",
     "echarts": "^5.5.1",
+    "echarts-for-react": "^3.0.2",
     "graphiql": "^3.7.1",
     "graphql": "^16.9.0",
     "i18next": "^23.16.4",
