--- a/package.json
+++ b/package.json
@@ -34,12 +34,16 @@
     "@types/react-dom": "^18.3.0",
     "@types/react-svg": "^5.0.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.9.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
     "i18next-browser-languagedetector": "^8.0.0",
+    "postcss": "^8.4.49",
     "redux-devtools-extension": "^2.13.9",
+    "sass": "^1.81.0",
+    "tailwindcss": "^3.4.15",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1",
