--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
   "dependencies": {
     "@ant-design/icons": "^5.4.0",
     "@emotion/css": "^11.13.0",
-    "@graphiql/plugin-explorer": "^3.2.2",
-    "@graphiql/react": "^0.26.2",
+    "@graphiql/plugin-explorer": "3.2.2",
+    "@graphiql/react": "0.26.2",
     "antd": "^5.20.2",
     "axios": "^1.7.5",
     "echarts": "^5.5.1",
     "echarts-for-react": "^3.0.2",
-    "graphiql": "^3.7.1",
-    "graphql": "^16.9.0",
+    "graphiql": "3.7.1",
+    "graphql": "16.9.0",
     "i18next": "^23.16.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
