--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,3 +31,14 @@ jobs:
         run: |
           chmod +x mvnw
           ./mvnw -B clean deploy
+
+  trigger-build-event:
+    needs: ["build"]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Repository dispatch
+        uses: peter-evans/repository-dispatch@v3
+        with:
+          token: ${{ secrets.PAT }}
+          repository: flexmodel-projects/flexmodel-server
+          event-type: ui_deploy
