--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -11,9 +11,7 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v3
       - name: Set up JDK 21
@@ -31,8 +29,7 @@ jobs:
         run: |
           chmod +x mvnw
           ./mvnw -B clean deploy
-
-  trigger-build-event:
+  dispatch:
     needs: ["build"]
     runs-on: ubuntu-latest
     steps:
