--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.4.0",
+    "@antv/x6": "^2.18.1",
+    "@antv/x6-react-shape": "^2.2.3",
     "@emotion/css": "^11.13.0",
     "@graphiql/plugin-explorer": "3.2.2",
     "@graphiql/react": "0.26.2",
-    "antd": "^5.20.2",
+    "antd": "^5.24.3",
     "axios": "^1.7.5",
     "echarts": "^5.5.1",
     "echarts-for-react": "^3.0.2",
