--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@graphiql/react": "0.26.2",
     "antd": "^5.24.3",
     "axios": "^1.7.5",
+    "dagre": "^0.8.5",
     "echarts": "^5.5.1",
     "echarts-for-react": "^3.0.2",
     "graphiql": "3.7.1",
@@ -32,6 +33,7 @@
     "redux-thunk": "2.3.0"
   },
   "devDependencies": {
+    "@types/dagre": "^0.7.52",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-svg": "^5.0.0",
