--- a/package.json
+++ b/package.json
@@ -20,14 +20,24 @@
     "axios": "^1.7.5",
     "echarts": "^5.5.1",
     "echarts-for-react": "^3.0.2",
+    "file-saver": "^2.0.5",
     "graphiql": "3.7.1",
     "graphql": "16.9.0",
     "i18next": "^23.16.4",
+    "jszip": "^3.2.2",
+    "lodash.get": "^4.4.2",
+    "lodash.set": "^4.3.2",
+    "prism-react-renderer": "^1.0.2",
+    "prismjs": "^1.30.0",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.1.0",
+    "react-markdown": "^10.1.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^6.26.1",
+    "react-toastify": "^11.0.5",
     "redux": "4.0.5",
     "redux-thunk": "2.3.0"
   },
