--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@graphiql/react": "0.26.2",
     "antd": "^5.24.3",
     "axios": "^1.7.5",
+    "dagre": "^0.8.5",
     "echarts": "^5.5.1",
     "echarts-for-react": "^3.0.2",
     "file-saver": "^2.0.5",
