--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/dagre": "^0.7.52",
     "@ant-design/icons": "^5.4.0",
     "@antv/x6": "^2.18.1",
     "@antv/x6-react-shape": "^2.2.3",
