--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,7 @@ dist-ssr
 target
 tsconfig.app.tsbuildinfo
 tsconfig.node.tsbuildinfo
+.history
+target
+tsconfig.app.tsbuildinfo
+tsconfig.node.tsbuildinfo
