--- a/package.json
+++ b/package.json
@@ -10,32 +10,40 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@types/dagre": "^0.7.52",
     "@ant-design/icons": "^5.4.0",
     "@antv/x6": "^2.18.1",
-    "@antv/x6-plugin-scroller": "2.0.10",
+    "@antv/x6-plugin-scroller": "^2.0.10",
     "@antv/x6-react-shape": "^2.2.3",
-    "@emotion/css": "^11.13.0",
     "@graphiql/plugin-explorer": "3.2.2",
     "@graphiql/react": "0.26.2",
+    "@types/dagre": "^0.7.52",
     "antd": "^5.24.3",
     "axios": "^1.7.5",
     "dagre": "^0.8.5",
     "echarts": "^5.5.1",
     "echarts-for-react": "^3.0.2",
+    "file-saver": "^2.0.5",
     "graphiql": "3.7.1",
     "graphql": "16.9.0",
     "i18next": "^23.16.4",
+    "jszip": "^3.2.2",
+    "lodash.get": "^4.4.2",
+    "lodash.set": "^4.3.2",
+    "prism-react-renderer": "^1.0.2",
+    "prismjs": "^1.30.0",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.1.0",
+    "react-markdown": "^10.1.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^6.26.1",
+    "react-toastify": "^11.0.5",
     "redux": "4.0.5",
     "redux-thunk": "2.3.0"
   },
   "devDependencies": {
-    "@types/dagre": "^0.7.52",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-svg": "^5.0.0",
@@ -54,6 +62,5 @@
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1",
     "vite-plugin-svgr": "^4.2.0"
-  },
-  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
+  }
 }
