--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "redux-thunk": "2.3.0"
   },
   "devDependencies": {
+    "@tsconfig/node18": "^18.2.2",
+    "@types/node": "^18.19.3",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-svg": "^5.0.0",
