--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ant-design/icons": "^5.4.0",
     "@antv/x6": "^2.18.1",
     "@antv/x6-plugin-scroller": "^2.0.10",
+    "@antv/x6-react-shape": "^2.2.3",
     "@graphiql/plugin-explorer": "3.2.2",
     "@graphiql/react": "0.26.2",
     "@types/dagre": "^0.7.52",
@@ -40,7 +41,8 @@
     "react-router-dom": "^6.26.1",
     "react-toastify": "^11.0.5",
     "redux": "4.0.5",
-    "redux-thunk": "2.3.0"
+    "redux-thunk": "2.3.0",
+    "x6-html-shape": "^0.4.9"
   },
   "devDependencies": {
     "@tsconfig/node18": "^18.2.2",
