--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@graphiql/plugin-explorer": "3.2.2",
     "@graphiql/react": "0.26.2",
     "@types/dagre": "^0.7.52",
+    "@types/react-transition-group": "^4.4.12",
     "antd": "^5.24.3",
     "axios": "^1.7.5",
     "dagre": "^0.8.5",
@@ -40,6 +41,7 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^6.26.1",
     "react-toastify": "^11.0.5",
+    "react-transition-group": "^4.4.5",
     "redux": "4.0.5",
     "redux-thunk": "2.3.0",
     "x6-html-shape": "^0.4.9"
