--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@antv/x6": "^2.18.1",
     "@antv/x6-plugin-scroller": "^2.0.10",
     "@antv/x6-react-shape": "^2.2.3",
-    "@graphiql/plugin-explorer": "3.2.2",
+    "@graphiql/plugin-explorer": "^3.2.2",
     "@graphiql/react": "0.26.2",
     "@types/dagre": "^0.7.52",
     "@types/react-transition-group": "^4.4.12",
