--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "@antv/x6": "^2.18.1",
     "@antv/x6-plugin-scroller": "^2.0.10",
     "@antv/x6-react-shape": "^2.2.3",
-    "@graphiql/plugin-explorer": "^3.2.2",
-    "@graphiql/react": "0.26.2",
+    "@graphiql/plugin-explorer": "^5.1.1",
+    "@graphiql/react": "^0.37.1",
     "@types/dagre": "^0.7.52",
     "@types/react-transition-group": "^4.4.12",
     "antd": "^5.24.3",
@@ -24,7 +24,7 @@
     "echarts": "^5.5.1",
     "echarts-for-react": "^3.0.2",
     "file-saver": "^2.0.5",
-    "graphiql": "3.7.1",
+    "graphiql": "^5.2.0",
     "graphql": "16.9.0",
     "i18next": "^23.16.4",
     "jszip": "^3.2.2",
