feat(components): 添加 AIChatBox组件并集成到 PageLayout
- 新增 AIChatBox 组件，用于 AI 助手聊天窗口- 在 PageLayout 中集成 AIChatBox，支持固定和悬浮模式- 更新 rules.md，调整布局相关要求，移除多余的规则
- 修改 FieldList 组件，优化默认值的显示格式
- 更新数据模型相关类型定义，为 defaultValue 添加专门的类型

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.4.0",
+    "@ant-design/x": "^1.6.0",
     "@antv/x6": "^2.18.1",
     "@antv/x6-plugin-scroller": "^2.0.10",
     "@antv/x6-react-shape": "^2.2.3",
