--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@graphiql/plugin-explorer": "^5.1.1",
     "@graphiql/react": "^0.37.1",
     "@graphiql/toolkit": "^0.11.3",
+    "@monaco-editor/react": "^4.7.0",
     "@types/dagre": "^0.7.52",
     "@types/react-transition-group": "^4.4.12",
     "antd": "^5.27.1",
