--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jszip": "^3.2.2",
     "lodash.get": "^4.4.2",
     "lodash.set": "^4.3.2",
+    "markdown-it": "^14.1.0",
     "prism-react-renderer": "^1.0.2",
     "prismjs": "^1.30.0",
     "prop-types": "^15.8.1",
@@ -49,6 +50,7 @@
   },
   "devDependencies": {
     "@tsconfig/node18": "^18.2.2",
+    "@types/markdown-it": "^14.1.2",
     "@types/node": "^18.19.3",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
