--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@monaco-editor/react": "^4.7.0",
     "@types/dagre": "^0.7.52",
     "@types/react-transition-group": "^4.4.12",
+    "@types/react-window": "^1.8.8",
     "@xyflow/react": "^12.8.4",
     "antd": "^5.27.1",
     "axios": "^1.7.5",
@@ -41,6 +42,7 @@
     "react-router-dom": "^6.26.1",
     "react-toastify": "^11.0.5",
     "react-transition-group": "^4.4.5",
+    "react-window": "^2.1.1",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
