--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "@types/react-transition-group": "^4.4.12",
     "@types/react-window": "^1.8.8",
     "@xyflow/react": "^12.8.4",
+    "ace-builds": "^1.43.4",
     "antd": "^5.27.1",
     "axios": "^1.7.5",
+    "brace": "^0.10.0",
     "dagre": "^0.8.5",
     "echarts": "^5.5.1",
     "echarts-for-react": "^3.0.2",
     "file-saver": "^2.0.5",
+    "generate-schema": "^2.6.0",
     "graphiql": "^5.2.0",
     "graphql": "16.9.0",
     "i18next": "^23.16.4",
@@ -33,16 +36,20 @@
     "lodash.get": "^4.4.2",
     "lodash.set": "^4.3.2",
     "markdown-it": "^14.1.0",
+    "moox": "^1.0.2",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.1.0",
     "react-markdown": "^10.1.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "react-toastify": "^11.0.5",
     "react-transition-group": "^4.4.5",
     "react-window": "^2.1.1",
+    "redux": "^5.0.1",
+    "underscore": "^1.13.6",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
