feat(custom-api):重构API详情与调试面板并新增历史记录功能- 重命名 BatchCreate 组件为 BatchCreateDrawer - DebugPanel 中引入 Monaco Editor 替换 TextArea，支持代码高亮与格式化- DetailPanel 中新增 JSON Schema 表格展示与数据映射配置渲染- 新增 HistoryModal 组件用于展示与还原历史操作记录- 页面中增加历史记录按钮，支持查看与恢复历史版本配置

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@graphiql/plugin-explorer": "^5.1.1",
     "@graphiql/react": "^0.37.1",
     "@graphiql/toolkit": "^0.11.3",
+    "@reduxjs/toolkit": "^2.2.7",
     "@monaco-editor/react": "^4.7.0",
     "@types/dagre": "^0.7.52",
     "@types/react-transition-group": "^4.4.12",
@@ -36,7 +37,6 @@
     "lodash.get": "^4.4.2",
     "lodash.set": "^4.3.2",
     "markdown-it": "^14.1.0",
-    "moox": "^1.0.2",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-copy-to-clipboard": "^5.1.0",
