--- a/package.json
+++ b/package.json
@@ -10,19 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@ant-design/icons": "^5.4.0",
-    "@ant-design/x": "^1.6.0",
+    "@ant-design/icons": "^6.0.0",
+    "@ant-design/x": "^2.0.0",
+    "@ant-design/x-sdk": "^2.0.0",
     "@graphiql/plugin-explorer": "^5.1.1",
     "@graphiql/react": "^0.37.1",
     "@graphiql/toolkit": "^0.11.3",
-    "@reduxjs/toolkit": "^2.2.7",
     "@monaco-editor/react": "^4.7.0",
+    "@reduxjs/toolkit": "^2.2.7",
     "@types/dagre": "^0.7.52",
     "@types/react-transition-group": "^4.4.12",
     "@types/react-window": "^1.8.8",
     "@xyflow/react": "^12.8.4",
     "ace-builds": "^1.43.4",
-    "antd": "^5.27.1",
+    "antd": "^6.0.0",
     "axios": "^1.7.5",
     "brace": "^0.10.0",
     "dagre": "^0.8.5",
