--- a/package.json
+++ b/package.json
@@ -13,10 +13,6 @@
     "@ant-design/icons": "^6.0.0",
     "@ant-design/x": "^2.0.0",
     "@ant-design/x-sdk": "^2.0.0",
-    "@graphiql/plugin-explorer": "^5.1.1",
-    "@graphiql/plugin-history": "^0.4.1",
-    "@graphiql/react": "^0.37.2",
-    "@graphiql/toolkit": "^0.11.3",
     "@monaco-editor/react": "^4.7.0",
     "@reduxjs/toolkit": "^2.2.7",
     "@types/dagre": "^0.7.52",
@@ -32,7 +28,8 @@
     "echarts-for-react": "^3.0.2",
     "file-saver": "^2.0.5",
     "generate-schema": "^2.6.0",
-    "graphiql": "^5.2.1",
+    "@graphiql/plugin-explorer": "5.0.0",
+    "graphiql": "5.0.0",
     "graphql": "16.9.0",
     "i18next": "^23.16.4",
     "jszip": "^3.2.2",
